--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx-container-test
-        image: gcr.io/felo-task-service-project/gke-test-nginx-0.1
-        ports:
-        - containerPort: 80
+        - name: nginx-container-test
+          image: "gcr.io/felo-task-service-project/gke-test-nginx-0.1:latest"
+          ports:
+            - containerPort: 80
