--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,9 +1,17 @@
 name: Build and Upload to GCR
 
 on:
+  workflow_dispatch:
+    inputs:
+      cd-pipeline:
+        description: 'spinnaker or gitactions?'     
+        required: true
+        default: 'spinnaker'
+
   push:
     branches:
       - main
+
 
 env:
   PROJECT_ID: felo-task-service-project
@@ -33,17 +41,11 @@ jobs:
     - run: |-
         gcloud --quiet auth configure-docker
 
-    # Prompt user for tag
-    - name: Prompt for Tag
-      id: tag
-      run: |-
-        echo "::set-output name=tag::$(read -p 'Enter tag (spinnaker/gitactions): ' tag && echo $tag)"
-
     # Build the Docker image
     - name: Build
       run: |-
         docker build \
-          --tag "gcr.io/$PROJECT_ID/$IMAGE:${{ steps.tag.outputs.tag }}-$GITHUB_SHA" \
+          --tag "gcr.io/$PROJECT_ID/$IMAGE:${{ github.event.inputs.cd-pipeline }}-$GITHUB_SHA" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
           .
@@ -51,4 +53,4 @@ jobs:
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |-
-        docker push "gcr.io/$PROJECT_ID/$IMAGE:${{ steps.tag.outputs.tag }}-$GITHUB_SHA"
+        docker push "gcr.io/$PROJECT_ID/$IMAGE:${{ github.event.inputs.cd-pipeline }}-$GITHUB_SHA"
