--- a/mychart/templates/deployment.yaml
+++ b/mychart/templates/deployment.yaml
@@ -21,8 +21,7 @@ spec:
       - env:
         - name: KUBERNETES_CLUSTER_DOMAIN
           value: {{ quote .Values.kubernetesClusterDomain }}
-        image: {{ .Values.gkeTest.nginxContainerTest.image.repository }}:{{ .Values.gkeTest.nginxContainerTest.image.tag
-          | default .Chart.AppVersion }}
+        image: {{ .Values.gkeTest.nginxContainerTest.image.repository }}:{{ .Values.gkeTest.nginxContainerTest.image.tag}}
         name: nginx-container-test
         ports:
         - containerPort: 80
