--- a/mychart/templates/deployment.yaml
+++ b/mychart/templates/deployment.yaml
@@ -1,4 +1,15 @@
 apiVersion: apps/v1
+sfkajdhbfksajhbdfkasjhbfkjdsahbfas
+fdskajfb askjfhdbas
+df
+asbdfj
+asbf
+dasbfj
+abs
+dlfnasjlkdfnlasdjfn
+asljnf
+asljndfjlasnf
+ljansfknajskln
 kind: Deployment
 metadata:
   name: {{ include "mychart.fullname" . }}-gke-test
