--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -69,7 +69,7 @@ jobs:
     
     - name: set up git branch
       run: |-
-        git checkout helm-charts
+        git checkout -b helm-charts
         get rebase main
 
     - name: helm package artifact 
