--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -70,7 +70,7 @@ jobs:
     - name: set up git branch
       run: |-
         git checkout -b helm-charts
-        get rebase main
+        git rebase main
 
     - name: helm package artifact 
       run: |-
