--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,10 +16,11 @@ env:
   GKE_ZONE: us-east1  # Add your cluster zone here.
   DEPLOYMENT_NAME: gke-test # Add your deployment name here.
   IMAGE: felo-nginx
+  BACKENDIMAGE: felo-nginx-backend
 
 jobs:
-  setup-build-publish:
-    name: Setup, Build and Publish
+  setup-build-publish-front:
+    name: Setup, Build and Publish the frontend image
     runs-on: ubuntu-latest
     environment: production
 
@@ -52,8 +53,44 @@ jobs:
       run: |-
         docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
 
+
+  setup-build-publish-backend:
+    name: Setup, Build and Publish the frontend image
+    runs-on: ubuntu-latest
+    environment: production
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    # Setup gcloud CLI
+    - uses: google-github-actions/setup-gcloud@94337306dda8180d967a56932ceb4ddcf01edae7
+      with:
+        service_account_key: ${{ secrets.GKE_SA_KEY }}
+        project_id: ${{ env.PROJECT_ID }}
+
+    # Configure Docker to use the gcloud command-line tool as a credential
+    # helper for authentication
+    - run: |-
+        gcloud --quiet auth configure-docker
+
+    # Build the Docker image
+    - name: Build
+      run: |-
+        docker build \
+          -f backend.dockerfile \
+          --tag "gcr.io/$PROJECT_ID/$BACKENDIMAGE:$GITHUB_SHA" \
+          --build-arg GITHUB_SHA="$GITHUB_SHA" \
+          --build-arg GITHUB_REF="$GITHUB_REF" \
+          .
+
+    # Push the Docker image to Google Container Registry
+    - name: Publish
+      run: |-
+        docker push "gcr.io/$PROJECT_ID/$BACKENDIMAGE:$GITHUB_SHA"
+
   helm:
-    needs: setup-build-publish
+    needs: setup-build-publish-front
     name: Helm
     runs-on: ubuntu-latest
     environment: production
@@ -111,7 +148,7 @@ jobs:
 
 
   deploy:
-    needs: setup-build-publish
+    needs: setup-build-publish-front
     name: Deploy
     runs-on: ubuntu-latest
     environment: production    # Set up kustomize
@@ -156,6 +193,7 @@ jobs:
         - name: Deploy
           run: |-
             ./kustomize edit set image gcr.io/davdav/felo-nginx=gcr.io/davdav/felo-nginx:$GITHUB_SHA
+            ./kustomize edit set image gcr.io/davdav/felo-nginx-backend=gcr.io/davdav/felo-nginx-backend:$GITHUB_SHA
             ./kustomize build . | kubectl apply -f -
             kubectl rollout status deployment/$DEPLOYMENT_NAME
             kubectl get services -o wide
